// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden snapshot — fixed score with pinned referenceDate > backend JD vs backend resume: score is stable 1`] = `
{
  "breakdown": {
    "education": 100,
    "experience": 75,
    "keywords": 100,
    "skills": 44.24999999999999,
  },
  "detectedSections": [
    "summary",
    "skills",
    "experience",
    "education",
  ],
  "experienceEntries": [
    {
      "dates": {
        "durationInMonths": 48,
        "end": "Dec 2022",
        "endMonth": 12,
        "endYear": 2022,
        "raw": "Software Engineer (Jan 2019 - Dec 2022)",
        "start": "Jan 2019",
        "startMonth": 1,
        "startYear": 2019,
      },
    },
  ],
  "experienceGap": 0,
  "matchedKeywords": [
    "backend",
    "docker",
    "engineer",
    "python",
    "sql",
  ],
  "matchedSkills": [
    "docker",
    "python",
    "sql",
  ],
  "missingKeywords": [],
  "missingSkills": [
    "backend",
    "javascript",
    "node",
    "react",
    "typescript",
  ],
  "overusedKeywords": [
    "backend",
    "docker",
    "engineer",
    "python",
    "sql",
  ],
  "parsedExperienceYears": 4,
  "score": 50.78,
  "suggestions": [
    "Highlight these required skills: backend, javascript, node, react, typescript",
    "Avoid keyword stuffing for: backend, docker, engineer, python, sql",
    "Strengthen bullet points with impact verbs (led, built, improved, delivered).",
  ],
  "warnings": [
    "Keyword stuffing detected for: backend, docker, engineer, python, sql (penalty 25)",
  ],
}
`;

exports[`golden snapshot — fixed score with pinned referenceDate > frontend JD vs full-stack resume: score is stable 1`] = `
{
  "breakdown": {
    "education": 0,
    "experience": 75,
    "keywords": 50,
    "skills": 49.99999999999999,
  },
  "detectedSections": [
    "summary",
    "skills",
    "experience",
    "education",
  ],
  "experienceEntries": [
    {
      "dates": {
        "durationInMonths": 73,
        "end": "present",
        "endMonth": 1,
        "endYear": 2026,
        "raw": "Senior Engineer at ExampleCorp (Jan 2020 - Present) - Built React apps and APIs.",
        "start": "Jan 2020",
        "startMonth": 1,
        "startYear": 2020,
      },
    },
  ],
  "experienceGap": 0,
  "matchedKeywords": [
    "engineer",
    "react",
    "typescript",
  ],
  "matchedSkills": [
    "javascript",
    "node",
    "react",
    "typescript",
  ],
  "missingKeywords": [
    "accessibility",
    "frontend",
    "graphql",
  ],
  "missingSkills": [
    "accessibility",
    "frontend",
    "graphql",
  ],
  "overusedKeywords": [
    "engineer",
    "react",
    "typescript",
  ],
  "parsedExperienceYears": 6.08,
  "score": 35,
  "suggestions": [
    "Highlight these required skills: accessibility, frontend, graphql",
    "Incorporate job-specific keywords: accessibility, frontend, graphql",
    "Avoid keyword stuffing for: engineer, react, typescript",
    "State your education credentials matching: bachelor",
    "Strengthen bullet points with impact verbs (led, built, improved, delivered).",
  ],
  "warnings": [
    "Keyword stuffing detected for: engineer, react, typescript (penalty 15)",
  ],
}
`;
